--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <input type="checkbox" name="" id="" />
     <div id="content">
-      <div class="one">1</div>
-      <div class="two">2</div>
-      <div class="three">3</div>
-      <div class="four nested">
-        4
-        <!-- <p>1</p>
-        <p>2</p>
-        <p>3</p>
-        <p>4</p> -->
+      <div id="grid">
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
       </div>
-      <div class="five">5</div>
-      <div class="six">6</div>
+      <header>Header</header>
+      <main>Main</main>
+      <section>Section</section>
+      <aside>Aside</aside>
+      <nav>Nav</nav>
+      <footer>Footer</footer>
     </div>
   </body>
 </html>
